kubernetes/message-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: message-service
spec:
  selector:
    app: message-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
