kubernetes/message-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: message-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: swwao.courses.orbit.au.dk
      http:
        paths:
          - pathType: Prefix
            path: "/grp-4/message(/|$)(.*)"
            backend:
              service:
                name: message-service
                port:
                  number: 8080
